# coa-map-reduce

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
results/: benchmark_metrics.csv
src/core/: benchmark.py  coa_baseline.py  coa_map_reduce.py  dataset.py  evaluation.py  full_context_baseline.py  manager_agent.py  map_reduce_worker_agent.py  metrics.py  rag_baseline.py  test_coa_baseline.py  test_coa_map_reduce.py  test_dataset.py  test_evaluation.py  test_full_context_baseline.py  test_manager_agent.py  test_map_reduce_worker_agent.py  test_metrics.py  test_rag_baseline.py  test_worker_agent.py  worker_agent.py
