[project]
name = "coa-map-reduce"
version = "0.1.0"
description = "Optimized Chain of Agents Framework"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "datasets",
    "pydantic>=2.12.5",
    "google-genai",
    "numpy",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
